--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.0.0-rc.19",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-lodash": "^2.0.2",
     "vue-moment": "^4.0.0"
   },
   "devDependencies": {
